--- a/index.html
+++ b/index.html
@@ -108,16 +108,15 @@
 <div class="container">
     <section id="home" class="section">
         <h2>Home</h2>
-        <p>Welcome to RoofWise Co, your trusted roofing and exterior remodeling company. We provide top-notch services in roofing, siding, gutters, and windows. We are dedicated to being wise about your needs and delivering quality results.</p>
+        <p>Welcome to RoofWise Co, your trusted roofing and exterior remodeling company. We provide top-notch services in roofing, siding, gutters, and windows. Our team is dedicated to delivering quality results that meet your needs.</p>
+        <img src="home-image.jpg" alt="RoofWise Co Home Image" style="width:100%;">
     </section>
 
     <section id="about-us" class="section hidden">
         <h2>About Us</h2>
-        <p>Welcome to RoofWise Co, a premier roofing and exterior remodeling company dedicated to enhancing the beauty, durability, and value of your property. With years of experience in the industry, we specialize in providing top-quality roofing, siding, gutter, and window services tailored to meet the unique needs of each client.</p>
-        <p>At RoofWise Co, our mission is to deliver exceptional craftsmanship and unparalleled customer service. We take pride in being CertainTeed Shingle Master certified, which reflects our commitment to using the best materials and adhering to the highest standards in the industry.</p>
-        <p>Our team of skilled professionals is equipped with the expertise and knowledge to handle projects of all sizes and complexities. Whether you need a simple repair or a complete exterior overhaul, we work diligently to ensure your satisfaction and exceed your expectations.</p>
-        <p>We believe in building long-lasting relationships with our clients based on trust, transparency, and integrity. From the initial consultation to the final inspection, we are here to guide you every step of the way, ensuring a seamless and stress-free experience.</p>
-        <p>Discover the RoofWise Co difference today and let us be your trusted partner for all your roofing and exterior remodeling needs.</p>
+        <p>RoofWise Co is a premier roofing and exterior remodeling company dedicated to enhancing the beauty, durability, and value of your property. With years of experience, we specialize in providing top-quality roofing, siding, gutter, and window services tailored to meet the unique needs of each client.</p>
+        <p>Our mission is to deliver exceptional craftsmanship and unparalleled customer service. We take pride in being CertainTeed Shingle Master certified, reflecting our commitment to using the best materials and adhering to the highest standards in the industry.</p>
+        <img src="about-us-image.jpg" alt="About Us Image" style="width:100%;">
     </section>
 
     <section id="service-area" class="section hidden">
@@ -129,20 +128,28 @@
             <li>City C</li>
             <li>City D</li>
         </ul>
+        <img src="service-area-image.jpg" alt="Service Area Image" style="width:100%;">
     </section>
 
     <section id="testimonials" class="section hidden">
         <h2>Testimonials</h2>
-        <p>"RoofWise Co did an amazing job on our new roof. Highly recommended!" - John Doe</p>
-        <p>"Professional and reliable service. Our new windows look fantastic!" - Jane Smith</p>
+        <p>Here's what our clients say about us:</p>
+        <blockquote>
+            <p>"RoofWise Co did an amazing job on our new roof. Highly recommended!" - John Doe</p>
+        </blockquote>
+        <blockquote>
+            <p>"Professional and reliable service. Our new windows look fantastic!" - Jane Smith</p>
+        </blockquote>
+        <img src="testimonials-image.jpg" alt="Testimonials Image" style="width:100%;">
     </section>
 
     <section id="contact-us" class="section hidden">
         <h2>Contact Us</h2>
         <p>Get in touch with us for a free quote or any inquiries:</p>
-        <p>Email: info@roofwiseco.com</p>
-        <p>Phone: (123) 456-7890</p>
+        <p>Email: <a href="mailto:info@roofwiseco.com">info@roofwiseco.com</a></p>
+        <p>Phone: <a href="tel:+1234567890">(123) 456-7890</a></p>
         <p>Address: 123 Roofing St, City, State, ZIP</p>
+        <img src="contact-us-image.jpg" alt="Contact Us Image" style="width:100%;">
     </section>
 
     <div class="certification">
